--- a/school.html
+++ b/school.html
@@ -158,7 +158,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 1)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -167,7 +167,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 1)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -180,8 +180,17 @@ Computing</h2>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text"><strong>18:00-20:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+                      <p class="text"><strong>18:00-19:00 -
+			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>19:00-20:00 -
+			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -194,7 +203,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-16:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 2)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -203,7 +212,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 2)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -217,7 +226,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>19:00-20:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<a style="color:#B40431;">Process Mining (Part 3: Applications)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -248,7 +257,7 @@ Computing</h2>
                    <tr>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -262,7 +271,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-17:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 3)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -338,7 +347,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 1)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -347,7 +356,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 1)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -360,8 +369,17 @@ Computing</h2>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text"><strong>13:00-15:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+                      <p class="text"><strong>13:00-14:00 -
+			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>14:00-15:00 -
+			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -374,7 +392,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>9:00-11:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 2)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -383,7 +401,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 2)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -397,7 +415,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<a style="color:#B40431;">Process Mining (Part 3: Applications)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -428,7 +446,7 @@ Computing</h2>
                    <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -442,7 +460,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 3)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -518,7 +536,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 1)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -527,7 +545,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>12:00-13:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 1)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -540,8 +558,17 @@ Computing</h2>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text"><strong>14:00-16:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+                      <p class="text"><strong>14:00-15:00 -
+			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>15:00-16:00 -
+			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -554,7 +581,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 2)/a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -563,7 +590,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>12:00-13:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 2)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -577,7 +604,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<a style="color:#B40431;">Process Mining (Part 3: Applications)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -608,7 +635,7 @@ Computing</h2>
                    <tr>
                     <td>
                       <p class="text"><strong>12:00-13:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -622,7 +649,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-13:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 3)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -698,7 +725,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>19:00-20:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 1)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -707,7 +734,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>20:00-21:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 1)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -720,8 +747,17 @@ Computing</h2>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text"><strong>22:00-24:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+                      <p class="text"><strong>22:00-23:00 -
+			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>23:00-24:00 -
+			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -734,7 +770,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>18:00-20:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 2)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -743,7 +779,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>20:00-21:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 2)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -757,7 +793,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>23:00-24:00 -
-			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<a style="color:#B40431;">Process Mining (Part 3: Applications)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -788,7 +824,7 @@ Computing</h2>
                    <tr>
                     <td>
                       <p class="text"><strong>20:00-21:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of St. Andrews, UK)
                       </p>
@@ -802,7 +838,7 @@ Computing</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>19:00-21:00 -
-			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 3)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
