--- a/school.html
+++ b/school.html
@@ -25,7 +25,7 @@
             style="color:#B40431;" href="programme.html">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="/.#COMMITTEES">Committees</a> | <a
-	    style="color:#CCAAAA;">ICTAC School 2021</a>
+	    style="color:#B40431;">ICTAC School 2021</a>
      <hr>
    </td>
 </tr>
