--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
 <h2>18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organised by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
-<h1 style="color:#B40431;">REGISTRATION</h1>
+<h1 style="color:#B40431;">CONFERENCE AND SCHOOL REGISTRATION</h1>
 </center>
 <p class="text"><strong>Registration to
 <a style="color:#B40431;" href="./">ICTAC 2021</a>
