--- a/registration.html
+++ b/registration.html
@@ -43,9 +43,9 @@ and to the
 <strong><a style="color:#B40431;" href="school.html">ICTAC School 2021</a>
 is free of charge.</strong>
 </p>
-<p class="text"><strong>In order to register you need to fill in a
+<h2 class="text"><strong>In order to register you need to fill in a
 <a style="color:#B40431;" href="https://forms.gle/rKLeT9S5QFkQ7Nht9">Google form</a></strong>.
-</p>
+</h2>
 <p class="text"><strong>Registration Deadlines:</strong>.
 <ul>
   <li>Presenters of accepted papers: Monday, 19 July 2021</li>
