--- a/school.html
+++ b/school.html
@@ -82,7 +82,7 @@ Computing</h2>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Process Mining</a>
-		(<i>3 hours</i> - Thu 2 Sep 18:00-20:00, Fri 3Sep 19:00-20:00 GMT+6)</h3>
+		(<i>3 hours</i> - Thu 2 Sep 19:00-20:00, Fri 3 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Wil van der Aalst</h3></li>
 		</ul>
@@ -553,22 +553,13 @@ Computing</h2>
                    </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:00-14:00 - BREAK</strong></p>
+                       <p class="text"><strong>13:00-15:00 - BREAK</strong></p>
                     </td>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text"><strong>14:00-15:00 -
-			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
-			<strong>Wil van der Aalst</strong>
-			(RWTH Aachen University, Germany)
-                      </p>
-                    </td>
-                   </tr>
-                  <tr>
-                    <td>
                       <p class="text"><strong>15:00-16:00 -
-			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
+			<a style="color:#B40431;">Process Mining (Part 1: Introduction)</a></strong><br>
 			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
@@ -598,10 +589,18 @@ Computing</h2>
                    </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:00-15:00 - BREAK</strong></p>
+                       <p class="text"><strong>13:00-14:00 - BREAK</strong></p>
                     </td>
                   </tr>               
                   <tr>
+                    <td>
+                      <p class="text"><strong>14:00-15:00 -
+			<a style="color:#B40431;">Process Mining (Part 2: Example algorithms)</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>                  <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
 			<a style="color:#B40431;">Process Mining (Part 3: Applications)</a></strong><br>
