--- a/school.html
+++ b/school.html
@@ -103,6 +103,9 @@ Computing</h2>
 		</ul>
 		<hr>
 </ol>
+The lectures presented at the ICTAC School 2021 will be published in Springer's Tutorial line of Lecture Notes in Computer Science.
+<br>	
+	<img src="LNCS-Logo.jpg" height="70">
 <hr>
 <a name="SCHEDULE+6"></a>
 <center>
