--- a/school.html
+++ b/school.html
@@ -58,6 +58,21 @@ Computing</h2>
 			<li><h3>Pedro De Oliveira Salazar Ribeiro</h3></li>
 			<li><h3>Alvaro Miyazawa</h3></li>
 		</ul>
+		<p><strong>Abstract:</strong>
+                        Use of simulation to support the design of software for robotic systems is pervasive.
+			Typically, roboticists draw a state machine using an informal notation
+			(not precise or machine checkable) to convey a design and guide the development of a simulation.
+			This involves writing code for a specific simulator (using C, C++, or some proprietary language and API).
+			Reactive robotics simulators do not normally generate code for deployment. Instead, simulation code
+			is often reused after changes.
+			So, there is potential loss of properties observed via simulation: because of the possibility of
+			changes introducing errors, and because of the reality gap. The RoboStar technology supports a model-based,
+			rather than (simulation) code, approach to development.
+			Models are written using domain-specific notations in line with those accepted by roboticists.
+			In this course, we will focus on modelling and verification using RoboChart, our design notation, and its tool.
+			In RoboChart, software controllers are described by timed state machines.
+			The semantics is defined using a process algebra, namely, tock-CSP, which we use for verification.
+		</p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Modelling interactions: digital and physical</a>
