--- a/school.html
+++ b/school.html
@@ -37,16 +37,15 @@ Computing</h2>
 <h2>VIRTUAL EVENT organised by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
-            style="color:#B40431;" href="#SCHEDULE+6">Schedule</a> | <a
-            style="color:#B40431;">Abstracts TBA</a>
+    <hr> <h2><a style="color:#B40431;" href="#COURSES">Courses</a> | <a
+		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a></a></h2>
      <hr>
    </td>
 </tr>
 </center>	
 <a name="COURSES"></a>
 <center>
-<h1 style="color:#B40431;">LIST OF COURSES</h1>
+<h1 style="color:#B40431;">COURSES</h1>
 <hr>
 </center>
 <ol>
