--- a/school.html
+++ b/school.html
@@ -51,8 +51,9 @@ Computing</h2>
 <ol>
 	<li><h3><a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a>
 		(<i>4 hours</i> - Wed 1 Sep 13:00-17:00 GMT+6)</h3>
+		<p>University of York, UK</>
 		<ul>
-			<li><h3>Ana Cavalcanti</h3> University of York, UK</li>
+			<li><h3>Ana Cavalcanti</h3></li>
 			<li><h3>James Baxter</h3></li>
 			<li><h3>Pedro De Oliveira Salazar Ribeiro</h3></li>
 			<li><h3>Alvaro Miyazawa</h3></li>
