--- a/school.html
+++ b/school.html
@@ -57,8 +57,9 @@ Computing</h2>
 			<li><h3>Pedro De Oliveira Salazar Ribeiro</h3></li>
 			<li><h3>Alvaro Miyazawa</h3></li>
 		</ul>
-		<p>RoboStar group, Department of Computer Science, University of York, UK</>
+		<p><em><strong>RoboStar group, Department of Computer Science, University of York, UK</em></strong></p>
 		<p><strong>Abstract:</strong>
+			<br>
                         Use of simulation to support the design of software for robotic systems is pervasive.
 			Typically, roboticists draw a state machine using an informal notation
 			(not precise or machine checkable) to convey a design and guide the development of a simulation.
@@ -80,6 +81,7 @@ Computing</h2>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
+		<p><em><strong>Computational Foundry / Ffowndri Gyfrifiadol Swansea University, Wales, UK</em></strong></p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
