--- a/school.html
+++ b/school.html
@@ -82,6 +82,18 @@ Computing</h2>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
 		<p><em><strong>Computational Foundry / Ffowndri Gyfrifiadol Swansea University, Wales, UK</em></strong></p>
+		<p><strong>Abstract:</strong>
+			<br>
+			The first part of this lecture will give a lightening introdction to the use of formal methods in human–computer interaction. 
+			This will include and overview of the kinds of models, and typical domains where techniques are currently applied.
+			It will then outline some of the potential future directions for the field based on the “Trends and Gaps” chapter of
+			“The Handbook of Formal Methods in Human-Computer Interaction”.
+			<br>
+			In the second part we will focus on a specific area, the formal specification and analysis of systems that have both physical and
+			digital aspects.  This will include using physigrams, a extension of finite state networks for describing interactions with
+			physical devices such hand-held controllers.  We will also look at the ways formal analysis contributed to the design of
+			an internet-enabled ‘cafe open’ sign – IoT in action!
+		</p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
