--- a/school.html
+++ b/school.html
@@ -90,9 +90,10 @@ Computing</h2>
 			“The Handbook of Formal Methods in Human-Computer Interaction”.
 			<br>
 			In the second part we will focus on a specific area, the formal specification and analysis of systems that have both physical and
-			digital aspects.  This will include using physigrams, a extension of finite state networks for describing interactions with
-			physical devices such hand-held controllers.  We will also look at the ways formal analysis contributed to the design of
-			an internet-enabled ‘cafe open’ sign – IoT in action!
+			digital aspects. 
+			This will include using physigrams, a extension of finite state networks for describing interactions with physical devices such as
+			hand-held controllers. 
+			We will also look at the ways formal analysis contributed to the design of an internet-enabled ‘cafe open’ sign – IoT in action!
 		</p>
 		<hr>
 	</li>
