--- a/school.html
+++ b/school.html
@@ -57,7 +57,7 @@ Computing</h2>
 			<li><h3>Pedro De Oliveira Salazar Ribeiro</h3></li>
 			<li><h3>Alvaro Miyazawa</h3></li>
 		</ul>
-		<p><em><strong>RoboStar group, Department of Computer Science, University of York, UK</em></strong></p>
+		<p><em><strong>RoboStar group, Department of Computer Science, University of York, England, UK</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
                         Use of simulation to support the design of software for robotic systems is pervasive.
@@ -102,6 +102,24 @@ Computing</h2>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles</h3></li>
 		</ul>
+		<p><em><strong>School of Computer Science, University of St. Andrews, Scotlans, UK</em></strong></p>
+		<p><strong>Abstract:</strong>
+			<br>
+			Formal methods have shown benefits across many domains, and are more commonly used for ensuring the correctness of critical systems.
+			This course shows how logic-based formalisms and automated tools can help to address a variety of problems that arise in the
+			healthcare domain.
+			One such example includes how to improve and personalise treatments for patients with multiple chronic conditions (aka multimorbidity)
+			and address patient safety concerns inherent in polypharmacy (e.g., the prescribing of 5 or more medications).
+			The combination of efficient and formal verification techniques, such as constraint solvers and theorem provers,
+			can be explored in this context to identify situations that arise and should be avoided when applying medical recommendations
+			for different chronic conditions simultaneously.
+			For example, drugs prescribed for different diseases may cause adverse reactions, health recommendations may contradict each other,
+			and/or undesired medication side effects may arise.
+			Instead, we would like to offer personalised treatments and find the preferred treatment for a patient in accordance to given
+			criteria (e.g. drug efficacy, prevalent disease, patient allergies, preferences, etc.).
+			In addition, this course will discuss how challenges arising in medicine can provide inspiration for further research on the
+			foundations of formal verification.
+		</p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
@@ -109,6 +127,10 @@ Computing</h2>
 		<ul>
 			<li><h3>Peter Csaba &Ouml;lveczky</h3></li>
 		</ul>
+		<p><em><strong>Department of Informatics, University of Oslo, Norway</em></strong></p>
+		<p><strong>Abstract:</strong>
+			<br>
+		</p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Process Mining</a>
@@ -116,6 +138,35 @@ Computing</h2>
 		<ul>
 			<li><h3>Wil van der Aalst</h3></li>
 		</ul>
+		<p><em><strong>RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT), Germany</em></strong></p>
+		<p><strong>Abstract:</strong>
+			Process mining is the missing link between model-based process analysis and data-oriented analysis techniques.
+			Through concrete data sets and easy-to-use software, the course provides concepts and tools that can be applied directly
+			to analyze and improve processes in a variety of domains. The course explains the key analysis techniques in process mining.
+			Participants will learn about process discovery techniques.
+			These can be used to automatically learn process models from raw event data. Various other process analysis techniques
+			that use event data will be presented, including conformance checking.
+			Moreover, the course will provide access to easy-to-use software, real-life data sets, and practical skills to directly
+			apply the theory in a variety of application domains.
+			In recent years, we could witness a spectacular uptake in process mining. There used to be a gap between process science
+			(i.e., tools and techniques to improve operational processes) and data science (i.e., tools and techniques to extract value from data).
+			Mainstream machine learning and data mining techniques do not consider operational processes.
+			Business Process Management (BPM) and Operations Research (OR) tend to start from models rather than data.
+			Process mining bridges this gap.
+			Currently, there are over 35 commercial process mining vendors (ABBYY Timeline, ARIS Process Mining, BusinessOptix,
+			Celonis Process Mining, Disco/Fluxicon, Everflow, Lana, Mavim, MPM, Minit, PAFnow, QPR, etc.) and process mining is applied
+			in most of the larger organizations.
+			Example application domains include: finance (Rabobank, Hypovereinsbank, etc.), telecom (Deutsche Telekom, Vodafone, etc.),
+			logistics (Vanderlande, etc.), production (BMW, Siemens, Fiat, Bosch, etc.), food (Edeka, etc.), fashion (Zalando, etc.),
+			energy (E-on, etc.), transport (Uber, DB, Lufthansa, etc.), healthcare (AstraZenica, Medtronic, etc.),
+			consulting (Deloitte, EY, KPMG, etc.), and IT systems (Dell, IBM, ServiceNow, etc.).
+			The course will be at an introductory level. Participants should have a basic understanding of process and data modeling without
+			knowing a specific notation or language.
+			Participants are encouraged to download the provided process mining software and data sets.
+			The demo sessions will provide smaller examples and show the application of both open-source and commercial software to the data sets
+			provided.
+			<br>
+		</p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
