--- a/school.html
+++ b/school.html
@@ -130,6 +130,29 @@ Computing</h2>
 		<p><em><strong>Department of Informatics, University of Oslo, Norway</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
+			Rewriting logic is a powerful and general, yet simple and intuitive,
+			logic for specifying dynamic systems, and is particularly suitable to
+			specify distributed computer systems in an object-oriented style.
+			<br>
+			Maude is a programming/modeling language and high-performance analysis  
+			tool for rewriting logic. Data types are defined by equational
+			specifications (which operationally can be seen as rich term
+			rewrite systems), while dynamic behaviors are specified by
+			(possibly conditional) rewrite rules. Maude models can then be
+			subjected to: (a) simulation by rewriting; (b) reachability analysis
+			by search; (c) various forms of temporal logic model checking; (d)
+			symbolic analysis; and (e) various forms of theorem proving using
+			associated tools.
+			<br>
+			Maude has been successfully applied to a wide range of sophisticated
+			systems, including: transport protocols, cloud-based distributed
+			transaction systems, biological systems, human cognition, programming
+			and modeling language semantics and analysis, cyber-physical systems,
+			and so on.
+			<br>
+			This tutorial gives an introduction to specification and analysis in Maude.
+			It also briefly touches upon some applications of Maude, and
+			extensions to real-time and probabilistic systems.
 		</p>
 		<hr>
 	</li>
@@ -140,6 +163,7 @@ Computing</h2>
 		</ul>
 		<p><em><strong>RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT), Germany</em></strong></p>
 		<p><strong>Abstract:</strong>
+			<br>
 			Process mining is the missing link between model-based process analysis and data-oriented analysis techniques.
 			Through concrete data sets and easy-to-use software, the course provides concepts and tools that can be applied directly
 			to analyze and improve processes in a variety of domains. The course explains the key analysis techniques in process mining.
