--- a/school.html
+++ b/school.html
@@ -102,7 +102,7 @@ Computing</h2>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles</h3></li>
 		</ul>
-		<p><em><strong>School of Computer Science, University of St. Andrews, Scotlans, UK</em></strong></p>
+		<p><em><strong>School of Computer Science, University of St. Andrews, Scotland, UK</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
 			Formal methods have shown benefits across many domains, and are more commonly used for ensuring the correctness of critical systems.
