--- a/school.html
+++ b/school.html
@@ -221,7 +221,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1: London</a> |
  <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2: CEST (Berlin, Paris, Rome)</a> |
- <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
+ <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydney), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
@@ -410,7 +410,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2: CEST</a> |
  <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6: Nur-Sultan, Almaty</a> |
- <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
+ <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydney), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
@@ -599,7 +599,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1: London</a> |
  <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6: Nur-Sultan, Almaty</a> |
- <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
+ <a style="color:#B40431;" href="#SCHEDULE+10">GMT+10: AET (Brisbane, Sydney), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
