--- a/school.html
+++ b/school.html
@@ -196,7 +196,9 @@ Computing</h2>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
 		(<i>2 hours</i> - Mon 6 Sep 14:00-16:00 GMT+6)</h3>
 		<ul>
-			<li><h3>Padmanabhan Krishnan</h3></li>
+			<li><h3><a style="color:#B40431;">Security Research at Oracle Labs, Australia: Program Analysis Meets Security</a>
+		            (<i>2 hours</i> - Mon 6 Sep 14:00-15:00 GMT+6)</h3>
+			    <h3>Padmanabhan Krishnan</h3></li>
 			<li><h3>Ben Tyler</h3></li>
 		</ul>
 		<hr>
