--- a/school.html
+++ b/school.html
@@ -197,14 +197,14 @@ Computing</h2>
 		(<i>2 hours</i> - Mon 6 Sep 14:00-16:00 GMT+6)</h3>
 		<ul>
 			<li><h3><a style="color:#B40431;">Security Research at Oracle Labs, Australia: Program Analysis Meets Security</a>
-		            (<i>2 hours</i> - Mon 6 Sep 14:00-15:00 GMT+6)</h3>
+		            (<i>1 hour</i> - Mon 6 Sep 14:00-15:00 GMT+6)</h3>
 			    <h3>Padmanabhan Krishnan</h3></li>
 		<p><em><strong>Oracle Labs, Australia</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
 		</p>
 			<li><h3><a style="color:#B40431;"></a>
-		            (<i>2 hours</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
+		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
 			    <h3>Ben Tyler</h3></li>
 		<p><em><strong>Department of Conputer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
