--- a/school.html
+++ b/school.html
@@ -202,8 +202,12 @@ Computing</h2>
 		<p><em><strong>Oracle Labs, Australia</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
+			In this presentation I will present a high level overview of various projects related to detecting security vulnerabilities.
+			These include static analyses, server-side dynamic analysis, client-side dynamic analysis, and malware analysis.
+			I will also outline the challenges that we overcame to ensure our research was  deployed in practice.
+			I will conclude with some of the remaining challenges especially in the context of DevSecOps.
 		</p>
-			<li><h3><a style="color:#B40431;"></a>
+			<li><h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
 		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
 			    <h3>Ben Tyler</h3></li>
 		<p><em><strong>Department of Conputer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
