--- a/school.html
+++ b/school.html
@@ -213,6 +213,13 @@ Computing</h2>
 		<p><em><strong>Department of Conputer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
+			While formal methods provide powerful means by which designers can show that their systems meet specific requirements,
+			industry has been slow to incorporate them due to the perceived high cost of adoption. 
+			In this talk, I will present my experiences working for a small business which developed and promoted formal methods tools
+			for use by public and government agencies, where the users were not necessarily specialists.
+			Specifically, I will discuss our use of a general-purpose design language, our development of intuitive graphics-based tools
+			to make the system design task easier, and how we applied automated model checking to the resulting system models.
+			I will also discuss our interaction with and feedback from clients regarding these tools.
 		</p>
 		</ul>
 		<hr>
