--- a/school.html
+++ b/school.html
@@ -228,7 +228,7 @@ Computing</h2>
 		(<i>2 hours</i> - Tue 7 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Antonio Cerone</h3></li>
-		<p><em><strong>Department of Conputer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
+		<p><em><strong>Department of Computer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
 		</p>
