--- a/school.html
+++ b/school.html
@@ -230,7 +230,20 @@ Computing</h2>
 			<li><h3>Antonio Cerone</h3></li>
 		<p><em><strong>Department of Computer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
+			Because of their purely mathematical nature and high complexity, formal methods are often perceived in industrial contexts
+			as difficult to understand and detached from reality
+			In fact, many aspects of reality are intuitively understood and informally described using conceptual rather than formal models.
+			This is especially true in human-computer interaction, since the human components of the overall system cannot be fully
+			caracterised in marthematical terms.
 			<br>
+			The first part of this short course introduces an intuitive notation to decribe human reasoning and behaviour and shows how to use it
+			informally to analyse human behaviour and human-computer interaction.
+			The second part considers conceptual models of momory processes and human behaviour from cognitive psychology in order to provide
+			alternative formal semantics to the intuitive notation.
+			This allows us to reconcile our intuitive notation with some formal methods presented in previous courses of the school
+			in order to formally verify human-computer inteactions.
+			Finally, the last part of the course, explores possible research developments in using formal methods to validate interactive
+			systems in the context of their real world usage.
 		</p>
 		</ul>
 		<hr>
