--- a/school.html
+++ b/school.html
@@ -210,7 +210,7 @@ Computing</h2>
 			<li><h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
 		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
 			    <h3>Ben Tyler</h3></li>
-		<p><em><strong>Department of Conputer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
+		<p><em><strong>Department of Computer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
 			While formal methods provide powerful means by which designers can show that their systems meet specific requirements,
